--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -26,3 +26,4 @@ jobs:
           deploy_key: ${{ secrets.GH_PAGES_DEPLOYER }}
           publish_dir: ./book
           publish_branch: gh-pages
+          cname: docs.multicall.app
