--- a/book.toml
+++ b/book.toml
@@ -9,6 +9,7 @@ title = "Near-multicall"
 
 [preprocessor.admonish]
 command = "mdbook-admonish"
+on_failure = "bail"
 assets_version = "2.0.0" # do not edit: managed by `mdbook-admonish install`
 
 [output]
